Increase form field height to avoid truncating characters in IE.
[#78684886] https://www.pivotaltracker.com/story/show/78684886 [Skip CI]

--- a/src/main/webapp/resources/oss/stylesheets/application.css
+++ b/src/main/webapp/resources/oss/stylesheets/application.css
@@ -8653,7 +8653,7 @@ input {
 
 .form-control {
   font-size: 16px;
-  height: 34px;
+  height: 36px;
   line-height: 1; }
 
 ::-webkit-input-placeholder {
